syntax = "proto3";

package bluefan.queue;

enum JobStatus {
  NONE = 0;
  WAIT = 1;
  RUN = 2;
  OK = 3;
  ERR = 4;
}

//
message JobValue {
  uint64 id = 1;
  JobStatus status = 2;
  string kind = 3;
  string args = 4;
}

//
message PutRequest {
  string queue = 1;
  
  string kind = 2;
  string args = 3;

  // if ttr is 0 use default ttr
  uint32 ttr = 4;
  uint32 delay = 5;
  // if ephemeral is true:
  // ttr = 0, durable = false
  bool ephemeral = 6;

  // when 0 is generated by the server
  uint64 job_id = 7;
}
 
//
message PutResponse {
  uint64 job_id = 1;
}

message LeaseRequest {
  string queue = 1;
}

// TODO:
// complete response
// touch
// delete
// release
// results
 
// Interface exported by the server.
service Queue {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Lease(LeaseRequest) returns (JobValue) {}
}